samples/_failures_safe/1761476111_b75984_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b2c8fa9.c: In function ‘main’:
./samples/SAFE/__tmp_5b2c8fa9.c:162:5: error: expected expression at end of input
  162 |     process_text(&processor,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_5b2c8fa9.c:162:5: error: expected declaration or statement at end of input
